overflow x fixed

--- a/app/public/wp-content/themes/z10-theme/css/modules/event-template.css
+++ b/app/public/wp-content/themes/z10-theme/css/modules/event-template.css
@@ -19,10 +19,8 @@
   background-size: cover;
   height: 100%;
   width: 100%;
-  opacity: 0.1;
+  opacity: 0.2;
   /*background-attachment: fixed;*/
-
-  
 
   @mixin atSmall {
     background-attachment: scroll;
@@ -72,10 +70,12 @@
   position: absolute;
   bottom: 0px;
   top: 120px;
+  right: 0px;
   margin: auto;
   margin-right: 10px;
   padding-right: 10px;
   overflow-y: auto;
+  overflow-x: hidden;
   left: 20px;
   
   @mixin atSmall {
@@ -90,6 +90,7 @@
 &__text p{
     text-overflow: ellipsis;
     line-height: 1.3;
+    overflow-wrap: break-word;
   }
 
 &__title {
