--- a/app/public/wp-content/themes/z10-theme/style.css
+++ b/app/public/wp-content/themes/z10-theme/style.css
@@ -1971,7 +1971,7 @@ body.admin-bar .search-overlay {
   background-size: cover;
   height: 100%;
   width: 100%;
-  opacity: 0.1;
+  opacity: 0.2;
   }
 /*background-attachment: fixed;*/
 @media (min-width: 530px) {
@@ -2023,10 +2023,12 @@ body.admin-bar .search-overlay {
   position: absolute;
   bottom: 0px;
   top: 120px;
+  right: 0px;
   margin: auto;
   margin-right: 10px;
   padding-right: 10px;
   overflow-y: auto;
+  overflow-x: hidden;
   left: 20px;
 }
 @media (min-width: 530px) {
@@ -2042,6 +2044,7 @@ body.admin-bar .search-overlay {
 .event-template__text p{
     text-overflow: ellipsis;
     line-height: 1.3;
+    overflow-wrap: break-word;
   }
 .event-template__title {
   position: relative;
